# pytest_book

./: .coveragerc  README.md
ch10/: test_cli.py  test_mock_attribute.py
ch12/script/: test_hello_world.py
ch14/: test_parallel.py  test_pass_fail.py
ch15/local/: conftest.py
ch15/pytest_skip_slow/: pytest_skip_slow.py
ch15/pytest_skip_slow_final/: pyproject.toml
ch15/pytest_skip_slow_src_dir/: pyproject.toml  tox.ini
ch15/pytest_skip_slow_src_dir/src/pytest_skip_slow/: plugin.py
ch16/: test_ids.py  test_indirect.py  test_multiple.py  test_optional.py  test_subset.py
